# CADRE-old

./: .gitignore  CADRE.ipynb  MANIFEST.in  README.md  README.txt  example.py  example_gs.py  example_launch.py  example_roll.py  generate_graph.py  generate_maps.py  ken_test.py  plot_snopt.py  postprocess.py  readcsv.py  readcsv_gs.py  readdb.py  setup.cfg  setup.py
docs/: conf.py  full.rst  glossary.rst  index.rst  launch.rst  overview.rst  pkgdocs.rst  roll.rst  srcdocs.rst
docs/maps/: 0_0_data.html  0_1_data.html  0_2_data.html  0_3_data.html  0_4_data.html  0_5_data.html  0_all_data.html  0_data.html  1_0_data.html  1_1_data.html  1_2_data.html  1_3_data.html  1_4_data.html  1_5_data.html  1_all_data.html  1_data.html  4_data.html  all_data.html
src/CADRE/: CADRE_assembly.py  CADRE_launch.py  CADRE_mdp.py  CADRE_roll.py  KS.py  __init__.py  attitude.py  battery.py  comm.py  kinematics.py  orbit.py  parameters.py  power.py  reactionwheel.py  rk4.py  solar.py  sun.py  thermal_temperature.py
src/CADRE/data/Power/: power.py  power0.py  power2.py
src/CADRE/test/: speeds.py  test_CADRE_derivs.py  test_assembly.py  test_components.py  test_derivatives.py  test_rk_deriv.py
