[metadata]
name = CADRE
version = 0.5
summary = OpenMDAO implementation of the CADRE CubeSat design problem
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/CADRE
download-url = 
author = Tristan A. Hearn
author-email = tristan.a.hearn@nasa.gov
maintainer = Tristan A. Hearn
maintainer-email = tristan.a.hearn@nasa.gov
license = Apache 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = 
	openmdao.main
	MBI
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

[easy_install]
find-links = http://openmdao.org/dists

